--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "onall",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "A helper for the event emitter that allows to only be fired when all events of a given type have been fired",
   "main": "index.js",
+  "type": "module",
   "keywords": [
     "onall",
     "onany",
@@ -31,11 +32,15 @@
     "test-travis": "istanbul cover _mocha --report lcovonly -- -R spec"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
     "chai": "^4.3.10",
     "coveralls": "^3.1.1",
     "gently": "^1.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^10.2.0",
-    "mocha-lcov-reporter": "^1.3.0"
+    "mocha-lcov-reporter": "^1.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0"
   }
 }
